bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: log-ingestion-system
    labels:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: log-ingestion-system
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: log-ingestion-system
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: backend
                  image: bhuvannnn/logs-backend:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-3000
                      containerPort: 3000
