bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: log-ingestion-system
    labels:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: log-ingestion-system
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: log-ingestion-system
                com.docker.compose.service: redis
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: redis
                  image: redis:alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: redis-6379
                      containerPort: 6379
