bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: log-ingestion-system
    labels:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: backend
    ports:
        - name: backend-3000
          port: 3000
          targetPort: backend-3000
