bridge/base/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: log-ingestion-system
    labels:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: log-ingestion-system
        com.docker.compose.service: frontend
    ports:
        - name: frontend-3001
          port: 3001
          protocol: TCP
          targetPort: frontend-3000

# check if there is at least one published port
